--- a/app/src/main/res/layout/item_penugasan.xml
+++ b/app/src/main/res/layout/item_penugasan.xml
@@ -34,6 +34,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/shape_line_solid"
             />
 
         <LinearLayout
