--- a/app/src/main/res/layout/activity_biaya_mekanik2.xml
+++ b/app/src/main/res/layout/activity_biaya_mekanik2.xml
@@ -100,6 +100,31 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="200sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Min Waktu Berbayar (Menit)"
+                        android:textSize="14sp" />
+
+                    <EditText
+                        android:id="@+id/txtMinWB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Rp."
+                        android:inputType="number"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
                         android:id="@+id/textView16"
                         android:layout_width="200sp"
                         android:layout_height="wrap_content"
@@ -109,30 +134,6 @@
 
                     <EditText
                         android:id="@+id/txtMek1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="Rp."
-                        android:inputType="number"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="200sp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Min Waktu Berbayar (Menit)"
-                        android:textSize="14sp" />
-
-                    <EditText
-                        android:id="@+id/txtMinWB1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -172,29 +173,6 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView13"
-                        android:layout_width="200sp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Min Waktu Berbayar (Menit)" />
-
-                    <EditText
-                        android:id="@+id/txtMinWB2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="Rp."
-                        android:inputType="number"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
                         android:id="@+id/textView18"
                         android:layout_width="200sp"
                         android:layout_height="wrap_content"
@@ -204,29 +182,6 @@
 
                     <EditText
                         android:id="@+id/txtMek3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:hint="Rp."
-                        android:inputType="number"
-                        android:textSize="14sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView19"
-                        android:layout_width="200sp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Min Waktu Berbayar (Menit)" />
-
-                    <EditText
-                        android:id="@+id/txtMinWB3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
