--- a/app/src/main/res/layout/activity_atur_parts_new.xml
+++ b/app/src/main/res/layout/activity_atur_parts_new.xml
@@ -44,126 +44,242 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
-                <EditText
-                    android:id="@+id/txtNoPart"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:text="No. Part"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/txtNamaPart"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:text="Nama Part"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-
-                <EditText
-                    android:id="@+id/txtNamaLain"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:enabled="false"
-                    android:text="Nama Lain"
-                    android:gravity="top|left"
-                    android:inputType="textMultiLine" />
-
-                <EditText
-                    android:id="@+id/txtMerk"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:text="Merk"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/txtStatus"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Status"
-                    android:enabled="false"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/txtWaktuGanti"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Waktu Ganti"
-                    android:enabled="false"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/txtWaktuPesan"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Waktu Pesan (Hari)"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/txtStockMinimum"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Stock Minimum"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <EditText
-                    android:id="@+id/txtStock"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="HET (Rp)"
-                    android:enabled="false"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
                     <TextView
-                        android:id="@+id/txtPolaHargaJual"
+                        android:id="@+id/textView20"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="NO. PART"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtNoPart"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Pola Harga Jual" />
+                        android:enabled="false"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="No. Part" />
+                </LinearLayout>
 
-                    <Spinner
-                        android:padding="20dp"
-                        android:id="@+id/sp_name"
-                        android:entries="@array/pola_harga_jual"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></Spinner>
-                    <ProgressBar
-                        android:id="@+id/pb_polaHargaJual"
-                        style="?android:attr/progressBarStyleSmall"
-                        android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|right"
-                        android:layout_marginRight="5dp"
-                        android:visibility="gone"/>
-                </FrameLayout>
+                        android:text="NAMA PART"
+                        android:textSize="18sp" />
 
-                <EditText
-                    android:id="@+id/txtMarginharga"
+                    <EditText
+                        android:id="@+id/txtNamaPart"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="Nama Part" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView22"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="MERK"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtMerk"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="Merk" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView23"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="STATUS"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="Status" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="WAKTU GANTI"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtWaktuGanti"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:text="Waktu Ganti" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView25"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="HET"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtStock"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:hint="HET (Rp)"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView26"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="WAKTU PESAN"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtWaktuPesan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Waktu Pesan (Hari)"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView27"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="STOCK MINIMUM"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtStockMinimum"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Stock Minimum"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Margin/Harga"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView28"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="POLA HARGA JUAL"
+                        android:textSize="17sp" />
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <Spinner
+                            android:id="@+id/sp_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:entries="@array/pola_harga_jual"
+                            android:padding="5dp"></Spinner>
+
+                        <ProgressBar
+                            android:id="@+id/pb_polaHargaJual"
+                            style="?android:attr/progressBarStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|right"
+                            android:visibility="gone" />
+                    </FrameLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView29"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="MARGIN/HARGA"
+                        android:textSize="18sp" />
+
+                    <EditText
+                        android:id="@+id/txtMarginharga"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Margin/Harga"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/tblSimpan"
