--- a/app/src/main/res/layout/item_biaya_mekanik2.xml
+++ b/app/src/main/res/layout/item_biaya_mekanik2.xml
@@ -22,6 +22,7 @@
                 android:layout_gravity="center"
                 android:foregroundGravity="center"
                 android:orientation="vertical"
+                android:background="@drawable/border_solid"
                 android:padding="10sp">
 
                 <TextView
