--- a/app/src/main/res/layout/activity_biaya_mekanik2.xml
+++ b/app/src/main/res/layout/activity_biaya_mekanik2.xml
@@ -40,7 +40,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:background="@drawable/border_solid" >
 
                 <LinearLayout
                     android:layout_width="match_parent"
