--- a/app/src/main/res/layout/activity_komisi__karyawan_.xml
+++ b/app/src/main/res/layout/activity_komisi__karyawan_.xml
@@ -97,7 +97,7 @@
                         android:layout_height="wrap_content">
 
                         <com.rkrzmail.srv.NikitaAutoComplete
-                            android:id="@+id/txtNamaPart"
+                            android:id="@+id/txt"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
 
