--- a/app/src/main/res/layout/activity_sparepart.xml
+++ b/app/src/main/res/layout/activity_sparepart.xml
@@ -55,7 +55,7 @@
                     android:singleLine="true" />
 
                 <EditText
-                    android:id="@+id/txtNamaPart"
+                    android:id="@+id/txt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
