--- a/app/src/main/res/layout/item_minta_partkeluar.xml
+++ b/app/src/main/res/layout/item_minta_partkeluar.xml
@@ -41,7 +41,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtNamaPart"
+                    android:id="@+id/txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_medium"
