--- a/app/src/main/res/layout/item_part_detail_lokasi.xml
+++ b/app/src/main/res/layout/item_part_detail_lokasi.xml
@@ -32,7 +32,7 @@
                     android:text="No. Part" />
 
                 <TextView
-                    android:id="@+id/txtNamaPart"
+                    android:id="@+id/txt"
                     android:layout_width="match_parent"
                     android:gravity="right"
                     android:textColor="@color/red_900"
