--- a/app/src/main/res/layout/item_pengambilan_part.xml
+++ b/app/src/main/res/layout/item_pengambilan_part.xml
@@ -34,7 +34,7 @@
 
 
                 <TextView
-                    android:id="@+id/txtNamaPart"
+                    android:id="@+id/txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_medium"
