--- a/app/src/main/res/layout/partberkala_item.xml
+++ b/app/src/main/res/layout/partberkala_item.xml
@@ -25,7 +25,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/txtNamaPart"
+                    android:id="@+id/txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="2"
